# ReSequel

./: LICENSE.txt  README.md
Experiments/: initMySQL.sh  initpgSQL.sh  run1SetupDependencies.sh  run2SetupBaseLines.sh  run3DownloadData.sh  run4GenerateData.sh  run5PrepareData-DuckDB.sh  run5PrepareData-MySQL.sh  run5PrepareData-PostgreSQL.sh  run6LocalExperiments.sh  run7LocalExperimentsBaselines.sh  runAll.sh
Experiments/baselines/SQLSolver/: pom.xml  sqlsolver.properties
Experiments/baselines/Workload/: Config.py  DBConfig.yaml  Database.py  FileHandler.py  LogResults.py  RunWorkload.py  Verify_LR.py  Verify_main.py  main.py  main_micro.py  main_verify.py  main_verify_LR.py  requirements.txt
Experiments/catalog/dsb/: call_center.json  catalog_page.json  catalog_returns.json  catalog_sales.json  customer.json  customer_address.json  customer_demographics.json  date_dim.json  dbgen_version.json  household_demographics.json  income_band.json  inventory.json  item.json  metadata.json  promotion.json  reason.json  schema.json  ship_mode.json  store.json  store_returns.json  store_sales.json  time_dim.json  warehouse.json  web_page.json  web_returns.json  web_sales.json  web_site.json
Experiments/catalog/imdb/: aka_title.json  cast_info.json  comp_cast_type.json  company_name.json  complete_cast.json  info_type.json  keyword.json  kind_type.json  link_type.json  movie_info.json  movie_info_idx.json  movie_keyword.json  name.json  person_info.json  title.json
Experiments/catalog/imdb_13k/: aka_name.json  char_name.json  company_type.json  metadata.json  movie_companies.json  movie_link.json  role_type.json  schema.json
Experiments/catalog/publicbibenchmark/: arade1.json  bimbo1.json  citymaxcapita1.json  cmsprovider1.json  cmsprovider2.json  commongovernment1.json  commongovernment10.json  commongovernment11.json  commongovernment12.json  commongovernment13.json  commongovernment2.json  commongovernment3.json  commongovernment4.json  commongovernment5.json  commongovernment6.json  commongovernment7.json  commongovernment8.json  commongovernment9.json  corporations1.json  eixo1.json  euro20161.json  food1.json  generico1.json  generico2.json  generico3.json  generico4.json  generico5.json  hashtags1.json  hatred1.json  iglocations11.json  iglocations21.json  iglocations22.json  iublibrary1.json  medicare11.json  medicare12.json  medicare21.json  medicare22.json  medicare31.json  medpayment11.json  medpayment21.json  (+168 more)
Experiments/catalog/stackoverflow/: badges.json  closereasontypes.json  comments.json  linktypes.json  metadata.json  posthistory.json  posthistorytypes.json  postlinks.json  posts.json  posttypes.json  schema.json  tags.json  users.json  votes.json  votetypes.json
Experiments/catalog/stats/: comments.json  metadata.json  posthistory.json  postlinks.json  posts.json  schema.json  users.json  votes.json
Experiments/catalog/stats_ceb/: badges.json  tags.json
Experiments/catalog/tpch/: customer.json  lineitem.json  metadata.json  nation.json  orders.json  part.json  partsupp.json  region.json  schema.json  supplier.json
Experiments/explocal/exp0_Catalog/: runExperiment0-Build-Catalog.sh  runExperiment0.sh
Experiments/explocal/exp1_ReSequel/: runExperiment1-BuildCatalog.sh  runExperiment1-Downsampling.sh  runExperiment1-Implement.sh  runExperiment1-Judge.sh  runExperiment1-Label.sh  runExperiment1-ReSequel.sh  runExperiment1-Reconstruct.sh  runExperiment1-Templatization.sh  runExperiment1-Verify-OR.sh  runExperiment1-Verify.sh  runExperiment1.sh
Experiments/explocal/exp2_Baselines/: runExperiment2-LLM-R2.sh  runExperiment2-LearnRewrite.sh  runExperiment2-R-Bot-Analyze.sh  runExperiment2-R-Bot.sh  runExperiment2-ReSequel-Micro-OR.sh  runExperiment2-ReSequel-OR.sh  runExperiment2-ReSequel.sh  runExperiment2-Verify-LLM-R2.sh  runExperiment2-Verify-LearnRewrite.sh  runExperiment2-Verify-R-Bot.sh  runExperiment2-Verify-SQLSolver.sh  runExperiment2.sh
Experiments/setup/MySQLConfigs/: config.txt
Experiments/setup/PGConfigs/: PG-32-148-35.conf  PG-32-148-35.conf2
Experiments/workload/DuckDB/imdb-template/: Template_1.sql  Template_11.sql  Template_12.sql  Template_13.sql  Template_16.sql  Template_18.sql  Template_19.sql  Template_2.sql  Template_21.sql  Template_22.sql  Template_23.sql  Template_24.sql  Template_25.sql  Template_26.sql  Template_27.sql  Template_28.sql  Template_29.sql  Template_3.sql  Template_30.sql  Template_31.sql  Template_32.sql  Template_33.sql  Template_35.sql  Template_37.sql  Template_38.sql  Template_39.sql  Template_40.sql  (+44 more)
src/main/cpp/: CMakeLists.txt  main.cpp
src/main/cpp/catalog/: CMakeLists.txt  CatalogBuilderFactory.cpp  CatalogBuilderFactory.h  CatalogInfo.cpp  CatalogInfo.h  PostgresCatalogBuilder.cpp  PostgresCatalogBuilder.h  ThreadPool.h
src/main/cpp/config/: PGConfig.yaml
src/main/cpp/database/: CMakeLists.txt  DatabaseConnectionFactory.cpp  DatabaseConnectionFactory.h  IDatabaseConnection.h  MaterializedQueryResult.cpp  MaterializedQueryResult.h  PostgresConnection.cpp  PostgresConnection.h
src/main/cpp/downsample/: CMakeLists.txt  DownSample.cpp  DownSample.h
src/main/cpp/resources/profiling_queries/PG/: central_table.sql  table_PK_FK.sql  table_cardinality.sql  table_indexes.sql  table_list.sql  table_profile.sql  table_schema.sql
src/main/cpp/scripts/: build.sh  build_catalog.sh  install_dep.sh  run.sh
src/main/cpp/scripts/test/: metadata.json
src/main/cpp/util/: CMakeLists.txt  Config.cpp  Config.h  FileHandler.cpp  FileHandler.h  Util.h
src/main/python/: APIKeys.yaml  DBCatalogQueries.yaml  DBConfig.yaml  LLMConfig.yaml  Rules.yaml  __init__.py  main.py  requirements.txt
(+14957 files in other folders)
